--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,3 +56,5 @@ jobs:
           sudo docker run -d -p 3200:${{ secrets.SERVER_PORT }} \
             --name temuka-main-api-service \
             ivanoskytan/temuka-main-api-service:latest
+
+          docker system prune -a -f --volumes  
