--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,7 +32,9 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t ivanoskytan/temuka-main-api-service:latest .
+        run: |
+          docker build -t ivanoskytan/temuka-main-api-service:latest .
+          docker system prune -a -f --volumes  
 
       - name: Verify Image Exists
         run: docker images
