--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,10 +1,3 @@
-name: Deploy Main API Service
-
-on:
-  push:
-    branches:
-      - master
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,6 +23,10 @@ jobs:
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Prune unused Docker images
+        run: |
+          sudo docker system prune -a -f --volumes
 
       - name: Build Docker Image
         run: docker build -t ivanoskytan/temuka-main-api-service:latest .
